--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+/*  your css code here. If applicable */
+body{
+	background-color: yellow;
+}
+div{
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
